--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -46,6 +45,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
     "genkit": "^1.14.1",
+    "googleapis": "^166.0.0",
     "jsbarcode": "^3.11.6",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
